--- a/test/core.html
+++ b/test/core.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="qunit/qunit.js"></script>
         <script type="text/javascript" src="../src/ui.controller.js"></script>
         <script type="text/javascript" src="core.js"></script>
+		<script type="text/javascript" src="http://localhost/testswarm/js/inject.js"></script>
     </head>
     <body>
         <h1 id="qunit-header">QUnit Test Suite</h1>
