First demo commit

--- a/demos/index.html
+++ b/demos/index.html
@@ -7,7 +7,7 @@
 		<link rel='stylesheet' type='text/css' href='../css/demo.css' />
 		<title>jQuery UI Controller || Demo Page</title>
 	</head>
-	<body class="ui-controller-layout-init ui-widget ui-widget-content">
+	<body class="ui-controller-demo-layout-init ui-widget ui-widget-content">
 			
 		<div class="ui-layout-north">
 			<h1 id="mk-header-title" class="ui-widget-header alt">jQuery UI Controller - Demo Page</h1>
@@ -18,6 +18,7 @@
             <table id="mk-west-grid"></table>
 		</div>
 		
+		<button>Click me!</button>
 		
 		<div class="ui-layout-center ui-controller-layout-init ">
 			<div id="mk-tabs">
@@ -40,6 +41,7 @@
 		<script type="text/javascript" src="../js/external/jquery.jqGrid.js"></script>
 		<script type="text/javascript" src="../js/external/jquery.layout.js"></script>
 		<script type="text/javascript" src="../js/external/jquery.themeswitcher.js"></script>
+		<script type="text/javascript" src="../js/external/jquery.livequery.js"></script>
 		<script type="text/javascript" src="../js/src/ui.controller.js"></script>
 		<script type="text/javascript" src="../js/src/bootstrap.js"></script>
 	</body>
