Simple demo case

--- a/demos/simple.html
+++ b/demos/simple.html
@@ -9,7 +9,7 @@
                 <input type="hidden" name="dto.login" value="mdaniel" />
                 <input type="hidden" name="test" value="mdaniel" />
                 <div class="ui-widget-header ui-corner-top">
-                    <h2>Simple Controller... Don't dare mouseovering me!</h2>
+                    <h2>Simple Controller... <em style="font-size: 0.6em;">Don't dare mouseovering me!</em></h2>
                     <button class="ui-state-default ui-corner-all">
                         Create
                     </button>
