--- a/demos/index.html
+++ b/demos/index.html
@@ -10,7 +10,7 @@
 	<body class="ui-controller-demo-layout-init ui-widget ui-widget-content">
 			
 		<div class="ui-layout-north">
-			<h1 id="mk-header-title" class="ui-widget-header alt">jQuery UI Controller - Demo Page</h1>
+			<h1 id="mk-header-title" class="ui-widget-header">jQuery UI Controller - Demo Page</h1>
 			<div id="mk-switcher"></div>
 		</div>
 		
